--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# 📘 Trabalho Bimestral – Aplicação Web com Cadastros
+# 📘 Trabalho Bimestral – Aplicação Web com Cadastros #
 
 ## 👥 Colaboradores
 
