--- a/README
+++ b/README
@@ -1,34 +1,30 @@
-# 📘 Trabalho Bimestral – Aplicação Web com Cadastros 
+# 📘 Trabalho Bimestral – Aplicação Web com Cadastros
 
 ## 👥 Colaboradores
 
-| 🧩 Membro         | 🔗 GitHub                                           |
-|------------------|----------------------------------------------------|
-| 👤 Igor Rampazo   | [github.com/IgorRamapazo](https://github.com/IgorRamapazo)   |
-| 👤 Leo Barros     | [github.com/9HirOziN6](https://github.com/9HirOziN6)         |
-| 👤 Maria Menenzes | [github.com/mariazinha1024](https://github.com/mariazinha1024) |
-
----
+| Membro         | GitHub                                              |
+|----------------|-----------------------------------------------------|
+| Igor Rampazo   | [github.com/IgorRamapazo](https://github.com/IgorRamapazo) |
+| Leo Barros     | [github.com/9HirOziN6](https://github.com/9HirOziN6)       |
+| Maria Menenzes | [github.com/mariazinha1024](https://github.com/mariazinha1024) |
 
 ## ✅ Requisitos
 
-| 📦 Recurso       | 💻 Comando                                |
-|------------------|--------------------------------------------|
-| Express          | `npm install express`                      |
-| JSON-Server      | `npm install -g json-server`               |
-| Session          | `npm install express express-session`      |
-
----
+| Recurso       | Comando                                |
+|---------------|----------------------------------------|
+| Express       | `npm install express`                  |
+| JSON-Server   | `npm install -g json-server`           |
+| Session       | `npm install express express-session`  |
 
 ## 🧩 Estrutura de Páginas do Sistema
 
-| 📄 Página                            | 🔓 Acesso | 🎯 Função Principal                     |
-|--------------------------------------|-----------|-----------------------------------------|
-| 🏠 Vitrine de Produtos               | Pública   | Exibir produtos para visitantes         |
-| 🔐 Login                             | Pública   | Autenticar usuário no sistema           |
-| 👤 Cadastro de Cliente               | Privada   | Cadastrar clientes                      |
-| 📦 Cadastro de Produto               | Privada   | Cadastrar produtos                      |
-| 🏭 Cadastro de Fornecedor            | Privada   | Cadastrar fornecedores                  |
-| 🚚 Cadastro de Entregador            | Privada   | Cadastrar entregadores                  |
-| 🗂️ Cadastro de Categorias            | Privada   | Cadastrar categorias de produtos        |
-| 👥 Cadastro de Usuários do Sistema   | Privada   | Criar contas de usuários do sistema     |
+| Página                            | Acesso   | Função Principal                     |
+|----------------------------------|----------|--------------------------------------|
+| Vitrine de Produtos              | Pública  | Exibir produtos para visitantes      |
+| Login                            | Pública  | Autenticar usuário no sistema        |
+| Cadastro de Cliente              | Privada  | Cadastrar clientes                   |
+| Cadastro de Produto              | Privada  | Cadastrar produtos                   |
+| Cadastro de Fornecedor           | Privada  | Cadastrar fornecedores               |
+| Cadastro de Entregador           | Privada  | Cadastrar entregadores               |
+| Cadastro de Categorias           | Privada  | Cadastrar categorias de produtos     |
+| Cadastro de Usuários do Sistema  | Privada  | Criar contas de usuários do sistema  |
